Fixed footer in edit.php and add word-wraping to group names frontend/php.

--- a/frontend/php/style.css
+++ b/frontend/php/style.css
@@ -11,6 +11,7 @@ body {
 	color: white;
 }
 a {
+	word-wrap: break-word;
 	text-decoration: none;
 	color: black;
 }
